Fixed selected tabs background wrong color on ios

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -8,6 +8,7 @@ ion-segment {
     --border-color:#5a62ff !important;
     --border-radius: 0;
     --border-style: none;
+    --ion-color-base: transparent;
 
     ion-icon {
       font-size: 33px;
